--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,9 @@ h1 {
 	text-align: center;
 	font-size: 20px;
 	font-family: "Georgia", Serif;
-	border-bottom: 1px solid #A9A9A9;
 }
 
+#timer {
+	text-align: center;
+}
 
